app/globals.css
@import "tailwindcss";
@import "tw-animate-css";
@import "shadcn/tailwind.css";

/* Degular font family */
@font-face {
  font-family: "Degular";
  src: url("/fonts/Degular-Thin.woff2") format("woff2");
  font-weight: 100;
  font-display: swap;
}

@font-face {
  font-family: "Degular";
  src: url("/fonts/Degular-Light.woff2") format("woff2");
  font-weight: 300;
  font-display: swap;
}

@font-face {
  font-family: "Degular";
  src: url("/fonts/Degular-Regular.woff2") format("woff2");
  font-weight: 400;
  font-display: swap;
}

@font-face {
  font-family: "Degular";
  src: url("/fonts/Degular-Medium.woff2") format("woff2");
  font-weight: 500;
  font-display: swap;
}

@font-face {
  font-family: "Degular";
  src: url("/fonts/Degular-Semibold.woff2") format("woff2");
  font-weight: 600;
  font-display: swap;
}

@font-face {
  font-family: "Degular";
  src: url("/fonts/Degular-Bold.woff2") format("woff2");
  font-weight: 700;
  font-display: swap;
}

@font-face {
  font-family: "Degular";
  src: url("/fonts/Degular-Black.woff2") format("woff2");
  font-weight: 900;
  font-display: swap;
}

@custom-variant dark (&:is(.dark *));

:root {
  --font-sans: "Degular", system-ui, sans-serif;
  --font-serif: "Lato", system-ui, sans-serif;
  --font-mono: "JetBrains Mono", ui-monospace, monospace;
  --background: oklch(1 0 0);
  --foreground: oklch(0.14 0 89.876);
  --card: oklch(1 0 0);
  --card-foreground: oklch(0.14 0 89.876);
  --popover: oklch(0 0 0);
  --popover-foreground: oklch(1 0 0);
  --primary: oklch(0.638 0.258 355.071);
  --primary-foreground: oklch(0.972 0.006 350.797);
  --secondary: oklch(0.469 0.301 266.623);
  --secondary-foreground: oklch(0.969 0.007 286.275);
  --muted: oklch(0.97 0 89.876);
  --muted-foreground: oklch(0.556 0 89.876);
  --accent: oklch(0.909 0.195 129.024);
  --accent-foreground: oklch(0.205 0 89.876);
  --destructive: oklch(0.537 0.218 353.737);
  --destructive-foreground: oklch(1 0 0);
  --border: oklch(0.919 0 89.876);
  --input: oklch(1 0 0);
  --ring: oklch(0.87 0 89.876);
  --chart-1: oklch(0.828 0.111 230.318);
  --chart-2: oklch(0.685 0.169 237.323);
  --chart-3: oklch(0.588 0.158 241.966);
  --chart-4: oklch(0.5 0.134 242.749);
  --chart-5: oklch(0.443 0.11 240.79);
  --radius: 0.625rem;
  --sidebar: oklch(0.985 0 89.876);
  --sidebar-foreground: oklch(0.371 0 89.876);
  --sidebar-primary: oklch(0.205 0 89.876);
  --sidebar-primary-foreground: oklch(0.985 0 89.876);
  --sidebar-accent: oklch(0.97 0 89.876);
  --sidebar-accent-foreground: oklch(0.205 0 89.876);
  --sidebar-border: oklch(0.919 0 89.876);
  --sidebar-ring: oklch(0.87 0 89.876);

  /* Colors: base */
  --white: oklch(1 0 0);
  --black: oklch(0 0 0);
}

.dark {
  --background: oklch(0.148 0.004 228.8);
  --foreground: oklch(0.987 0.002 197.1);
  --card: oklch(0.218 0.008 223.9);
  --card-foreground: oklch(0.987 0.002 197.1);
  --popover: oklch(0.218 0.008 223.9);
  --popover-foreground: oklch(0.987 0.002 197.1);
  --primary: oklch(0.925 0.005 214.3);
  --primary-foreground: oklch(0.218 0.008 223.9);
  --secondary: oklch(0.275 0.011 216.9);
  --secondary-foreground: oklch(0.987 0.002 197.1);
  --muted: oklch(0.275 0.011 216.9);
  --muted-foreground: oklch(0.723 0.014 214.4);
  --accent: oklch(0.275 0.011 216.9);
  --accent-foreground: oklch(0.987 0.002 197.1);
  --destructive: oklch(0.704 0.191 22.216);
  --border: oklch(1 0 0 / 10%);
  --input: oklch(1 0 0 / 15%);
  --ring: oklch(0.56 0.021 213.5);
  --chart-1: oklch(0.828 0.111 230.318);
  --chart-2: oklch(0.685 0.169 237.323);
  --chart-3: oklch(0.588 0.158 241.966);
  --chart-4: oklch(0.5 0.134 242.749);
  --chart-5: oklch(0.443 0.11 240.79);
  --sidebar: oklch(0.218 0.008 223.9);
  --sidebar-foreground: oklch(0.987 0.002 197.1);
  --sidebar-primary: oklch(0.488 0.243 264.376);
  --sidebar-primary-foreground: oklch(0.987 0.002 197.1);
  --sidebar-accent: oklch(0.275 0.011 216.9);
  --sidebar-accent-foreground: oklch(0.987 0.002 197.1);
  --sidebar-border: oklch(1 0 0 / 10%);
  --sidebar-ring: oklch(0.56 0.021 213.5);
}

@theme inline {
  --font-sans: var(--font-sans);
  --font-serif: var(--font-serif);
  --font-mono: var(--font-mono);

  --color-sidebar-ring: var(--sidebar-ring);
  --color-sidebar-border: var(--sidebar-border);
  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
  --color-sidebar-accent: var(--sidebar-accent);
  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
  --color-sidebar-primary: var(--sidebar-primary);
  --color-sidebar-foreground: var(--sidebar-foreground);
  --color-sidebar: var(--sidebar);
  --color-chart-5: var(--chart-5);
  --color-chart-4: var(--chart-4);
  --color-chart-3: var(--chart-3);
  --color-chart-2: var(--chart-2);
  --color-chart-1: var(--chart-1);
  --color-ring: var(--ring);
  --color-input: var(--input);
  --color-border: var(--border);
  --color-destructive: var(--destructive);
  --color-accent-foreground: var(--accent-foreground);
  --color-accent: var(--accent);
  --color-muted-foreground: var(--muted-foreground);
  --color-muted: var(--muted);
  --color-secondary-foreground: var(--secondary-foreground);
  --color-secondary: var(--secondary);
  --color-primary-foreground: var(--primary-foreground);
  --color-primary: var(--primary);
  --color-popover-foreground: var(--popover-foreground);
  --color-popover: var(--popover);
  --color-card-foreground: var(--card-foreground);
  --color-card: var(--card);
  --color-foreground: var(--foreground);
  --color-background: var(--background);
  --radius-sm: calc(var(--radius) * 0.6);
  --radius-md: calc(var(--radius) * 0.8);
  --radius-lg: var(--radius);
  --radius-xl: calc(var(--radius) * 1.4);
  --radius-2xl: calc(var(--radius) * 1.8);
  --radius-3xl: calc(var(--radius) * 2.2);
  --radius-4xl: calc(var(--radius) * 2.6);
}

@theme {
  /* Colors: neutral */
  --color-neutral-50: oklch(0.985 0 89.876);
  --color-neutral-100: oklch(0.97 0 89.876);
  --color-neutral-200: oklch(0.919 0 89.876);
  --color-neutral-300: oklch(0.87 0 89.876);
  --color-neutral-400: oklch(0.712 0 89.876);
  --color-neutral-500: oklch(0.556 0 89.876);
  --color-neutral-600: oklch(0.439 0 89.876);
  --color-neutral-700: oklch(0.371 0 89.876);
  --color-neutral-800: oklch(0.264 0 89.876);
  --color-neutral-900: oklch(0.205 0 89.876);
  --color-neutral-950: oklch(0.14 0 89.876);

  /* Colors: blue */
  --color-blue-50: oklch(0.969 0.007 286.275);
  --color-blue-100: oklch(0.937 0.015 286.112);
  --color-blue-200: oklch(0.858 0.044 285.433);
  --color-blue-300: oklch(0.706 0.124 283.802);
  --color-blue-400: oklch(0.522 0.245 274.124);
  --color-blue-500: oklch(0.469 0.301 266.623);
  --color-blue-600: oklch(0.416 0.284 264.684);
  --color-blue-700: oklch(0.342 0.225 266.022);
  --color-blue-800: oklch(0.27 0.159 269.271);
  --color-blue-900: oklch(0.219 0.104 273.754);
  --color-blue-950: oklch(0.19 0.068 277.793);

  /* Colors: lime */
  --color-lime-50: oklch(0.978 0.007 132.414);
  --color-lime-100: oklch(0.96 0.015 126.82);
  --color-lime-200: oklch(0.927 0.045 126.565);
  --color-lime-300: oklch(0.89 0.111 127.7);
  --color-lime-400: oklch(0.87 0.2 129.914);
  --color-lime-500: oklch(0.909 0.195 129.024);
  --color-lime-600: oklch(0.876 0.223 130.809);
  --color-lime-700: oklch(0.811 0.222 132.337);
  --color-lime-800: oklch(0.661 0.175 131.676);
  --color-lime-900: oklch(0.528 0.127 130.001);
  --color-lime-950: oklch(0.452 0.099 129.152);

  /* Colors: pink */
  --color-pink-50: oklch(0.972 0.006 350.797);
  --color-pink-100: oklch(0.944 0.014 343.211);
  --color-pink-200: oklch(0.88 0.043 343.142);
  --color-pink-300: oklch(0.775 0.111 343.52);
  --color-pink-400: oklch(0.668 0.215 348.662);
  --color-pink-500: oklch(0.638 0.258 355.071);
  --color-pink-600: oklch(0.537 0.218 353.737);
  --color-pink-700: oklch(0.43 0.17 352.127);
  --color-pink-800: oklch(0.321 0.117 350.326);
  --color-pink-900: oklch(0.233 0.071 348.476);
  --color-pink-950: oklch(0.175 0.043 344.222);

  /* Colors: yellow */
  --color-yellow-50: oklch(0.977 0.005 78.298);
  --color-yellow-100: oklch(0.964 0.015 106.669);
  --color-yellow-200: oklch(0.934 0.04 104.011);
  --color-yellow-300: oklch(0.911 0.102 105.212);
  --color-yellow-400: oklch(0.908 0.17 104.949);
  --color-yellow-500: oklch(0.938 0.174 104.676);
  --color-yellow-600: oklch(0.916 0.188 103.942);
  --color-yellow-700: oklch(0.827 0.173 103.301);
  --color-yellow-800: oklch(0.664 0.136 104.636);
  --color-yellow-900: oklch(0.525 0.102 104.5);
  --color-yellow-950: oklch(0.438 0.078 104.383);
}

/* Scrollbar */
html,
body {
  -ms-overflow-style: none;
  scrollbar-width: none;
  scroll-behavior: smooth;
}

* {
  -ms-overflow-style: none;
  scrollbar-width: none;
}

html::-webkit-scrollbar,
body::-webkit-scrollbar,
*::-webkit-scrollbar {
  display: none;
  width: 0;
  height: 0;
}

*::-webkit-scrollbar-track {
  background: transparent;
  border: 0;
  box-shadow: none;
}

*::-webkit-scrollbar-thumb {
  background: transparent;
  border: 0;
  box-shadow: none;
}

/* Utilities */
@layer utilities {
  .font-heading {
    font-family: var(--font-sans);
  }

  .font-body {
    font-family: var(--font-serif);
  }

  .font-code {
    font-family: var(--font-mono);
  }

  .font-display {
    font-family: "Degular", system-ui, sans-serif;
  }

  .type-heading-1 {
    font-family: var(--font-sans);
    font-size: 3rem;
    line-height: 3rem;
    letter-spacing: -0.09375rem;
    font-weight: 600;
  }

  .type-heading-2 {
    font-family: var(--font-sans);
    font-size: 1.875rem;
    line-height: 1.875rem;
    letter-spacing: -0.0625rem;
    font-weight: 600;
  }

  .type-heading-3 {
    font-family: var(--font-sans);
    font-size: 1.5rem;
    line-height: 1.8rem;
    letter-spacing: -0.0625rem;
    font-weight: 600;
  }

  .type-heading-4 {
    font-family: var(--font-sans);
    font-size: 1.25rem;
    line-height: 1.5rem;
    letter-spacing: 0;
    font-weight: 600;
  }

  .type-paragraph-large {
    font-family: var(--font-serif);
    font-size: 1.125rem;
    line-height: 1.6875rem;
    letter-spacing: 0;
    font-weight: 400;
  }

  .type-paragraph-regular {
    font-family: var(--font-serif);
    font-size: 1rem;
    line-height: 1.5rem;
    letter-spacing: 0;
    font-weight: 400;
  }

  .type-paragraph-small {
    font-family: var(--font-serif);
    font-size: 0.875rem;
    line-height: 1.25rem;
    letter-spacing: 0;
    font-weight: 400;
  }

  .type-paragraph-mini {
    font-family: var(--font-serif);
    font-size: 0.75rem;
    line-height: 1rem;
    letter-spacing: 0;
    font-weight: 400;
  }

  .type-monospaced {
    font-family: var(--font-mono);
    font-size: 1rem;
    line-height: 1.5rem;
    letter-spacing: 0;
    font-weight: 400;
  }

  .type-caption {
    font-family: var(--font-serif);
    font-size: 0.875rem;
    line-height: 1.3125rem;
    letter-spacing: 0;
    font-weight: 400;
  }

  .animate-scroll {
    animation: scroll 20s linear infinite;
  }

  @keyframes scroll {
    to {
      transform: translateX(-50%);
    }
  }
}

@layer base {
  * {
    @apply border-border outline-ring/50;
  }
  body {
    @apply bg-background text-foreground;
  }
  html {
    @apply font-sans;
  }
}

